fix: goal indicator warning poor contrast in dark and classic themes (#2401)

--- a/src/extension/features/budget/budget-category-features/goal-warning-color/index.css
+++ b/src/extension/features/budget/budget-category-features/goal-warning-color/index.css
@@ -1,78 +1,50 @@
-/* We set the colors as variables, to be able to modify them, just in case */
 :root {
   --tk-color-goal-warning-underfunded: #c9e1fd;
-  --tk-color-goal-warning-underfunded-hover: #a6cefc;
-  --tk-color-goal-warning-underfunded-message: #d0ecf5;
-  --tk-color-goal-warning-underfunded-text: #445c78;
+  --tk-color-goal-warning-underfunded-hover: #b0d5ff;
+  --tk-color-goal-warning-underfunded-message-bg: #ecf4ff;
+  --tk-color-goal-warning-underfunded-message-text: #000000;
+  --tk-color-goal-warning-underfunded-message-border: #70b3ff;
+}
+
+body.theme-dark {
+  --tk-color-goal-warning-underfunded: #429aff;
+  --tk-color-goal-warning-underfunded-hover: #61abff;
+  --tk-color-goal-warning-underfunded-message-bg: #0f1e2d;
+  --tk-color-goal-warning-underfunded-message-text: #429aff;
+  --tk-color-goal-warning-underfunded-message-border: #429aff;
+}
+
+body.theme-classic {
+  --tk-color-goal-warning-underfunded: #298cff;
+  --tk-color-goal-warning-underfunded-hover: #0378ff;
+  --tk-color-goal-warning-underfunded-message-bg: #d0e4ff;
+  --tk-color-goal-warning-underfunded-message-text: #000000;
+  --tk-color-goal-warning-underfunded-message-border: #0378ff;
 }
 
 /* row */
-.budget-table-row[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available]):not([tk-spending-goal])
-  .budget-table-cell-available
-  .ynab-new-budget-available-number:not(.negative):not(.credit) {
-  color: var(--tk-color-goal-warning-underfunded-text);
+.budget-table-row .budget-table-cell-available .ynab-new-budget-available-number.cautious.goal {
   background-color: var(--tk-color-goal-warning-underfunded);
 }
-.budget-table-row[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available]):not([tk-spending-goal])
+.budget-table-row
   .budget-table-cell-available
-  .ynab-new-budget-available-number:not(.negative):not(.credit):hover {
+  .ynab-new-budget-available-number.cautious.goal:hover {
   background-color: var(--tk-color-goal-warning-underfunded-hover);
 }
 
-/* goal */
-.budget-table-row[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available]):not([tk-spending-goal])
-  .budget-table-cell-available
-  .ynab-new-budget-available-number:not(.negative):not(.credit)
-  .icon-goal
-  circle.inner {
-  fill: var(--tk-color-goal-warning-underfunded-text);
-}
-.budget-table-row[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available]):not([tk-spending-goal])
-  .budget-table-cell-available
-  .ynab-new-budget-available-number:not(.negative):not(.credit)
-  .icon-goal
-  circle.outer {
-  stroke: var(--tk-color-goal-warning-underfunded-text);
-}
-
 /* inspector */
-.budget-inspector[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available])
+.budget-inspector
   .budget-inspector-category-overview
-  .inspector-overview-available
-  dt {
-  color: var(--tk-color-goal-warning-underfunded-text);
-}
-.budget-inspector[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available])
-  .budget-inspector-category-overview
-  .ynab-new-budget-available-number {
-  color: var(--tk-color-goal-warning-underfunded-text);
+  .ynab-new-budget-available-number.cautious.goal {
   background: var(--tk-color-goal-warning-underfunded);
 }
-.budget-inspector[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available])
-  .budget-inspector-category-overview
-  .inspector-message {
-  background: var(--tk-color-goal-warning-underfunded-message);
-}
-.budget-inspector[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available])
-  .budget-inspector-category-overview
-  .inspector-message
-  .inspector-message-arrow {
-  border-bottom-color: var(--tk-color-goal-warning-underfunded-message);
+.budget-inspector .ynab-new-inspector-goals-view-goal .goal-message {
+  color: var(--tk-color-goal-warning-underfunded-message-text);
+  background: var(--tk-color-goal-warning-underfunded-message-bg);
+  border-color: var(--tk-color-goal-warning-underfunded-message-border);
 }
 
 /* Fix background of available marker, where span overrides the background color */
 .inspector-overview-available span {
   background: transparent !important;
-}
-
-/* goal */
-.budget-inspector[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available])
-  .icon-goal
-  circle.inner {
-  fill: var(--tk-color-goal-warning-underfunded-text);
-}
-.budget-inspector[data-toolkit-goal-underfunded]:not([data-toolkit-negative-available])
-  .icon-goal
-  circle.outer {
-  stroke: var(--tk-color-goal-warning-underfunded-text);
 }
